--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link rel="stylesheet" href="normalizer.css" />
+    <link rel="stylesheet" href="index.css" />
     <title>React App</title>
   </head>
   <body>
