--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,9 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="stylesheet" href="normalizer.css" />
-    <link rel="stylesheet" href="index.css" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/normalizer.css" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/index.css" />
     <title>React App</title>
   </head>
   <body>
